Adding UI configuration

--- a/public/index.html
+++ b/public/index.html
@@ -1,8 +1,11 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 	<head>
+		<meta charset="utf-8" />
 		<title>Prime Number Generator</title>
 	</head>
-    <body><h1>Hello World!!!</h1>
-    
-    </body>
+	<body>
+		<div id="root"></div>
+		<script src="build/app.bundle.js"></script>
+	</body>
 </html>
