--- a/public/index.html
+++ b/public/index.html
@@ -3,6 +3,8 @@
 	<head>
 		<meta charset="utf-8" />
 		<title>Prime Number Generator</title>
+		<link rel="stylesheet" href="assets/font-awesome.css" />
+		<script defer src="assets/font-awesome.js"></script>
 	</head>
 	<body>
 		<div id="root"></div>
